--- a/Harmony/package.json
+++ b/Harmony/package.json
@@ -21,7 +21,8 @@
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
-    "react-native-text-gradient": "^0.1.7"
+    "react-native-text-gradient": "^0.1.7",
+    "react-native-vector-icons": "^10.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
