--- a/Harmony/package.json
+++ b/Harmony/package.json
@@ -13,16 +13,19 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "expo-linear-gradient": "^12.5.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-text-gradient": "^0.1.7",
-    "react-native-vector-icons": "^10.0.1"
+    "react-native-vector-icons": "^10.0.1",
+    "react-otp-input": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
