--- a/Harmony/package.json
+++ b/Harmony/package.json
@@ -10,13 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "axios": "^1.6.1",
+    "base-64": "^1.0.0",
+    "events": "^3.3.0",
     "expo-linear-gradient": "^12.5.0",
+    "js-sha256": "^0.10.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-app-auth": "^7.1.0",
+    "react-native-crypto": "^2.2.0",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-progress": "^5.0.1",
@@ -25,7 +32,10 @@
     "react-native-screens": "^3.27.0",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^10.0.1",
-    "react-otp-input": "^3.1.0"
+    "react-native-webview": "^13.6.2",
+    "react-otp-input": "^3.1.0",
+    "stream": "^0.0.2",
+    "text-encoding": "^0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
