--- a/Harmony/package.json
+++ b/Harmony/package.json
@@ -18,6 +18,9 @@
     "axios": "^1.6.1",
     "base-64": "^1.0.0",
     "events": "^3.3.0",
+    "expo": "^49.0.0",
+    "expo-auth-session": "~5.0.2",
+    "expo-crypto": "~12.4.1",
     "expo-linear-gradient": "^12.5.0",
     "js-sha256": "^0.10.1",
     "react": "18.2.0",
@@ -30,10 +33,12 @@
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-svg": "^13.14.0",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^10.0.1",
     "react-native-webview": "^13.6.2",
     "react-otp-input": "^3.1.0",
+    "react-redux": "^8.1.3",
     "stream": "^0.0.2",
     "text-encoding": "^0.7.0"
   },
