--- a/Harmony/package.json
+++ b/Harmony/package.json
@@ -23,12 +23,14 @@
     "expo-crypto": "~12.4.1",
     "expo-linear-gradient": "^12.5.0",
     "js-sha256": "^0.10.1",
+    "langchain": "^0.0.185",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-app-auth": "^7.1.0",
     "react-native-crypto": "^2.2.0",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-permissions": "^3.10.1",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
