--- a/Harmony/package.json
+++ b/Harmony/package.json
@@ -17,13 +17,16 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^1.6.1",
     "base-64": "^1.0.0",
+    "dotenv": "^16.3.1",
     "events": "^3.3.0",
     "expo": "^49.0.0",
     "expo-auth-session": "~5.0.2",
     "expo-crypto": "~12.4.1",
     "expo-linear-gradient": "^12.5.0",
     "js-sha256": "^0.10.1",
+    "js-yaml": "^4.1.0",
     "langchain": "^0.0.185",
+    "openai": "^4.17.4",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-app-auth": "^7.1.0",
