--- a/Harmony/package.json
+++ b/Harmony/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^1.1.2",
     "@react-native-async-storage/async-storage": "^1.19.4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.9",
