--- a/Harmony/package.json
+++ b/Harmony/package.json
@@ -13,8 +13,10 @@
     "@pinecone-database/pinecone": "^1.1.2",
     "@react-native-async-storage/async-storage": "^1.19.4",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^1.6.1",
     "base-64": "^1.0.0",
@@ -27,7 +29,6 @@
     "js-sha256": "^0.10.1",
     "js-yaml": "^4.1.0",
     "langchain": "^0.0.185",
-    "openai": "^4.17.4",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-app-auth": "^7.1.0",
@@ -36,7 +37,6 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^3.10.1",
     "react-native-progress": "^5.0.1",
-    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^13.14.0",
