--- a/Harmony/package.json
+++ b/Harmony/package.json
@@ -33,6 +33,7 @@
     "react-native": "0.72.6",
     "react-native-app-auth": "^7.1.0",
     "react-native-crypto": "^2.2.0",
+    "react-native-deck-swiper": "^2.0.16",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^3.10.1",
