--- a/Harmony/package.json
+++ b/Harmony/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.10.7",
     "@pinecone-database/pinecone": "^1.1.2",
     "@react-native-async-storage/async-storage": "^1.19.4",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^18.6.1",
+    "@react-native-firebase/auth": "^18.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -26,6 +29,7 @@
     "expo-auth-session": "~5.0.2",
     "expo-crypto": "~12.4.1",
     "expo-linear-gradient": "^12.5.0",
+    "firebase": "^10.6.0",
     "js-sha256": "^0.10.1",
     "js-yaml": "^4.1.0",
     "langchain": "^0.0.185",
