--- a/Harmony/package.json
+++ b/Harmony/package.json
@@ -62,6 +62,7 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/js-yaml": "^4.0.9",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.17",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
