--- a/Harmony/package.json
+++ b/Harmony/package.json
@@ -28,7 +28,9 @@
     "expo": "^49.0.0",
     "expo-auth-session": "~5.0.2",
     "expo-crypto": "~12.4.1",
+    "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "^12.5.0",
+    "expo-permissions": "^14.4.0",
     "firebase": "^10.6.0",
     "js-sha256": "^0.10.1",
     "js-yaml": "^4.1.0",
@@ -39,6 +41,7 @@
     "react-native-crypto": "^2.2.0",
     "react-native-deck-swiper": "^2.0.16",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-image-picker": "^7.0.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^3.10.1",
     "react-native-progress": "^5.0.1",
