--- a/Harmony/package.json
+++ b/Harmony/package.json
@@ -47,6 +47,7 @@
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "^13.14.0",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^10.0.1",
