--- a/Harmony/package.json
+++ b/Harmony/package.json
@@ -35,6 +35,7 @@
     "js-sha256": "^0.10.1",
     "js-yaml": "^4.1.0",
     "langchain": "^0.0.185",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-app-auth": "^7.1.0",
