added continue listening option

--- a/Harmony/app.json
+++ b/Harmony/app.json
@@ -2,6 +2,7 @@
   "name": "Harmony",
   "displayName": "Harmony",
   "expo": {
+    "scheme": "harmony",
     "expo": {
       "ios": {
         "infoPlist": {
